# iot_based_smart_pills_dispenser

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/buzzer/: CMakeLists.txt
components/buzzer/include/: buzzer.h
components/buzzer/src/: buzzer.c
components/config/: CMakeLists.txt
components/config/include/: config.h
components/keypad/: CMakeLists.txt
components/keypad/include/: keypad.h
components/keypad/src/: keypad.c
components/lcd/: CMakeLists.txt
components/lcd/include/: lcd.h
components/led/: CMakeLists.txt
components/led/include/: led.h
components/led/src/: led.c
components/motor/: CMakeLists.txt
components/motor/include/: stepper_motor.h
components/relay/: CMakeLists.txt
components/relay/include/: relay.h
components/rtc/: CMakeLists.txt
components/rtc/include/: ds1302.h  rtc.h
components/rtc/src/: ds1302.c
components/scheduler/: CMakeLists.txt
components/scheduler/include/: scheduler.h
components/scheduler/src/: scheduler.c
components/stepper_motor/: CMakeLists.txt
components/stepper_motor/include/: stepper_motor.h
components/stepper_motor/src/: main_stepper_motor_tst.c  stepper_motor.c
components/time_service/: CMakeLists.txt
components/time_service/include/: time_service.h
components/time_service/src/: time_service.c  (+1 more)
components/ultrasonic/: CMakeLists.txt
components/utils/: CMakeLists.txt
components/wifi_mqtt/: CMakeLists.txt
docs/: about_topics.md  keypad_manual.md  mqtt_topics.md  use.md
main/: CMakeLists.txt  main.c
tests/: CMakeLists.txt
tests/src/: test_scheduler.c
(+9 files in other folders)
